<resources>
    <string name="app_name">StoryApp</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="label_image_logo">Image Logo</string>
    <string name="label_solution">View a story and give a solution to every post that needs help easily anywhere and anytime.</string>
    <string name="label_start">Start</string>
    <string name="label_new_stories">New Stories</string>
    <string name="label_desc_new_stories">Create your stories and complaints easily anywhere and anytime</string>
    <string name="label_help_solution">Help</string>
    <string name="label_sharing">Sharing</string>
    <string name="label_desc_sharing"><![CDATA[You can also post tips & tricks as well as the obstacles you are facing.]]></string>
    <string name="label_connection">Connection</string>
    <string name="label_desc_connection"><![CDATA[When giving solutions and giving tips & tricks, we can also get to know each other and connect with each other]]></string>
    <string name="label_register">Register</string>
    <string name="label_desc_register">Create a new Account ?</string>
    <string name="label_login">Login</string>
    <string name="label_input_password">Input your password</string>
    <string name="label_password">Password</string>
    <string name="label_input_email">Input your email</string>
    <string name="label_email">Email</string>
    <string name="label_desc_login">Login with your account</string>
    <string name="label_name">Name</string>
    <string name="label_input_name">Input your name</string>
    <string name="label_arrow_back">Image Arrow Back</string>
    <string name="label_min_input_password">Minimal input password 6 character</string>
    <string name="label_desc_input_email">Please enter the email to format</string>
    <string name="label_stories">Stories</string>
    <string name="label_post_stories">Post Stories</string>
    <string name="label_setting">Setting</string>
    <string name="label_image_poster">Image Poster</string>
    <string name="label_image_photo">Image Photo</string>
    <string name="label_camera">Camera</string>
    <string name="label_gallery">Gallery</string>
    <string name="label_upload">Upload</string>
    <string name="label_description">Description</string>
    <string name="label_switch_camera">Switch Camera</string>
    <string name="label_fail_show_camera">Failed show camera.</string>
    <string name="label_denied_permission">Denied a permission.</string>
    <string name="label_choose_picture">Choose a picture</string>
    <string name="label_change_language">Change Language</string>
    <string name="label_logout">Log Out</string>
    <string name="label_information">Information</string>
    <string name="action_yes">Yes</string>
    <string name="action_no">No</string>
    <string name="label_confirm_logout">Are you sure you want to leave ?</string>
    <string name="label_confirm_upload">Are you sure you want post a stories ?</string>
    <string name="label_confirm_register">Are you sure you want to register ?</string>
    <string name="action_oke">Oke</string>
    <string name="label_failed_register">Failed to register, Please check your email and password</string>
    <string name="label_failed_login">Failed to login, Please check your email and password</string>
    <string name="label_failed_load_data">Failed to load data, please re-login</string>
    <string name="label_failed_post_stories">Failed to post stories, Please check your photo and description</string>
    <string name="label_loading">Loading...</string>
    <string name="label_photo">photo</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="app_widget_description">This is an app widget description</string>
    <string name="empty_text">No Data</string>
    <string name="label_stories_widget">Stories Widget</string>
    <string name="label_map">Map</string>
    <string name="label_retry">Retry</string>
    <string name="label_fail_parsing_style">Style parsing failed.</string>
    <string name="label_give_permission">Please give a permission your location</string>
    <string name="label_permission_on_maps">Please give a location permission on menu Maps</string>
    <string name="label_success_post_stories">Post a new Stories Success</string>
    <string name="label_please_check_permission">Please check your permission</string>
    <string name="label_failed_get_map">Failed to get data location map</string>
    <string name="label_permission_map">Please allow your permission map at Maps</string>
</resources>