<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentasion.register.RegisterActivity">

    <ImageView
        android:id="@+id/imgBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_arrow_back"
        android:layout_marginStart="@dimen/dimens_16dp"
        android:layout_marginTop="@dimen/dimens_16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/label_arrow_back" />

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/lottie"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimens_0dp"
        android:layout_marginStart="@dimen/dimens_32dp"
        android:layout_marginEnd="@dimen/dimens_4dp"
        app:lottie_autoPlay="true"
        app:lottie_loop="true"
        app:lottie_fileName="register.json"
        android:layout_marginBottom="@dimen/dimens_4dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgBack"
        app:layout_constraintBottom_toTopOf="@+id/tvRegister"/>

    <TextView
        android:id="@+id/tvRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dimens_16dp"
        android:layout_marginBottom="@dimen/dimens_30dp"
        android:fontFamily="sans-serif-condensed-light"
        android:textSize="@dimen/text_size_30sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:text="@string/label_register"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/tvName"/>

    <TextView
        android:id="@+id/tvName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dimens_16dp"
        android:layout_marginBottom="@dimen/dimens_4dp"
        android:fontFamily="sans-serif-condensed-light"
        android:textSize="@dimen/text_size_16sp"
        android:textStyle="bold"
        android:text="@string/label_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/edtName"/>

    <com.example.storyapp.utils.customview.ClearTextView
        android:id="@+id/edtName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dimens_16dp"
        android:paddingStart="@dimen/dimens_8dp"
        android:paddingEnd="@dimen/dimens_8dp"
        android:hint="@string/label_input_name"
        android:layout_marginEnd="@dimen/dimens_16dp"
        android:layout_marginBottom="@dimen/dimens_4dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/tvEmail"/>

    <TextView
        android:id="@+id/tvEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dimens_16dp"
        android:layout_marginBottom="@dimen/dimens_4dp"
        android:fontFamily="sans-serif-condensed-light"
        android:textSize="@dimen/text_size_16sp"
        android:textStyle="bold"
        android:text="@string/label_email"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/edtEmail"/>

    <com.example.storyapp.utils.customview.EmailTextView
        android:id="@+id/edtEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dimens_16dp"
        android:paddingStart="@dimen/dimens_8dp"
        android:paddingEnd="@dimen/dimens_8dp"
        android:hint="@string/label_input_email"
        android:layout_marginEnd="@dimen/dimens_16dp"
        android:layout_marginBottom="@dimen/dimens_4dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/tvPassword"/>

    <TextView
        android:id="@+id/tvPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dimens_16dp"
        android:layout_marginBottom="@dimen/dimens_4dp"
        android:fontFamily="sans-serif-condensed-light"
        android:textSize="@dimen/text_size_16sp"
        android:textStyle="bold"
        android:text="@string/label_password"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/edtPassword"/>

    <com.example.storyapp.utils.customview.PasswordTextView
        android:id="@+id/edtPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dimens_16dp"
        android:paddingStart="@dimen/dimens_8dp"
        android:paddingEnd="@dimen/dimens_8dp"
        android:hint="@string/label_input_password"
        android:layout_marginEnd="@dimen/dimens_16dp"
        android:layout_marginBottom="@dimen/dimens_16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/btnRegister"/>

    <com.example.storyapp.utils.customview.ButtonView
        android:id="@+id/btnRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:enabled="false"
        android:hint="@string/label_register"
        android:layout_marginStart="@dimen/dimens_16dp"
        android:layout_marginEnd="@dimen/dimens_16dp"
        android:layout_marginBottom="@dimen/dimens_64dp"
        app:layout_constraintBottom_toTopOf="@+id/tvLabelLogin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/tvLabelLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/dimens_16dp"
        android:layout_marginStart="@dimen/dimens_100dp"
        android:fontFamily="sans-serif-condensed-light"
        android:gravity="center_horizontal"
        android:text="@string/label_desc_login"
        android:textColor="@color/colorTextGray"
        android:textSize="@dimen/text_size_16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <TextView
        android:id="@+id/tvLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/dimens_16dp"
        android:layout_marginStart="@dimen/dimens_8dp"
        android:fontFamily="sans-serif-condensed-light"
        android:gravity="center_horizontal"
        android:text="@string/label_login"
        android:textStyle="bold"
        android:textColor="@color/colorBlue"
        android:textSize="@dimen/text_size_16sp"
        app:layout_constraintStart_toEndOf="@+id/tvLabelLogin"
        app:layout_constraintBottom_toBottomOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>