<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentasion.poststories.PostStoriesFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.cardview.widget.CardView
            android:id="@+id/cvPhoto"
            android:layout_width="@dimen/dimens_250dp"
            android:layout_height="@dimen/dimens_250dp"
            android:layout_marginTop="@dimen/dimens_32dp"
            app:cardCornerRadius="@dimen/dimens_50dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <ImageView
                android:id="@+id/imgPhoto"
                android:scaleType="centerCrop"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@string/label_image_photo" />
        </androidx.cardview.widget.CardView>

        <com.example.storyapp.utils.customview.ButtonView
            android:id="@+id/btnCamera"
            android:layout_width="@dimen/dimens_0dp"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_button_blue"
            android:layout_marginStart="@dimen/dimens_64dp"
            android:layout_marginEnd="@dimen/dimens_16dp"
            android:text="@string/label_camera"
            android:layout_marginTop="@dimen/dimens_32dp"
            app:layout_constraintEnd_toStartOf="@+id/btnGallery"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cvPhoto"/>

        <com.example.storyapp.utils.customview.ButtonView
            android:id="@+id/btnGallery"
            android:layout_width="@dimen/dimens_0dp"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_button_blue"
            android:layout_marginStart="@dimen/dimens_16dp"
            android:layout_marginEnd="@dimen/dimens_64dp"
            android:text="@string/label_gallery"
            android:layout_marginTop="@dimen/dimens_32dp"
            app:layout_constraintStart_toEndOf="@+id/btnCamera"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cvPhoto"/>

        <TextView
            android:id="@+id/tvDescription"
            android:layout_width="@dimen/dimens_0dp"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-condensed-light"
            android:gravity="center_horizontal"
            android:text="@string/label_description"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size_16sp"
            android:textStyle="bold"
            android:layout_marginTop="@dimen/dimens_8dp"
            app:layout_constraintStart_toStartOf="@+id/btnCamera"
            app:layout_constraintTop_toBottomOf="@+id/btnCamera" />

        <com.example.storyapp.utils.customview.ClearTextView
            android:id="@+id/edtDescription"
            android:layout_width="@dimen/dimens_0dp"
            android:layout_height="@dimen/dimens_250dp"
            android:layout_marginTop="@dimen/dimens_4dp"
            android:layout_marginBottom="@dimen/dimens_8dp"
            android:layout_marginStart="@dimen/dimens_64dp"
            android:layout_marginEnd="@dimen/dimens_64dp"
            app:layout_constraintBottom_toTopOf="@+id/btnUpload"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvDescription"/>

        <com.example.storyapp.utils.customview.ButtonView
            android:id="@+id/btnUpload"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:enabled="false"
            android:text="@string/label_upload"
            android:layout_marginStart="@dimen/dimens_64dp"
            android:layout_marginEnd="@dimen/dimens_64dp"
            android:layout_marginBottom="@dimen/dimens_16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>